Back to using old packet system, couple handy additions.

--- a/src/main/resources/assets/hammercore/lang/en_US.lang
+++ b/src/main/resources/assets/hammercore/lang/en_US.lang
@@ -105,5 +105,7 @@ hc.splash.lt.1=%player% you spilled taint all over the floor!
 hc.splash.1=Now with mods!
 hc.splash.2=A certain penguin comes to mind...
 hc.splash.3="It's been a long time. How have you been?"
+hc.splash.4=Now WITH SOUNDS!
+hc.splash.5=100% cubic!
 
 ################
