--- a/src/main/resources/assets/hammercore/lang/de_DE.lang
+++ b/src/main/resources/assets/hammercore/lang/de_DE.lang
@@ -37,6 +37,9 @@ tile.hammercore:infi_rf.tooltip0=Erzeugt 2,147,483,647 En/t
 tile.hammercore:infi_rf.tooltip1=Unterstützte Energiearten:
 tile.hammercore:infi_rf.tooltip2=RF, FE, TESLA
 tile.hammercore:chunk_loader.name=Chunk Loader
+tile.hammercore:compound_crafting_table_0.name=CCT
+tile.hammercore:compound_crafting_table_1.name=Compound Crafting Table
+tile.hammercore:compound_crafting_table_2.name=Compound Crafting Table (CCT)
 
 ############
 
@@ -61,16 +64,51 @@ capability.items.name=Items
 
 ##MANUAL##
 
-bookapi.hammercore:manual:items=Items
-bookapi.hammercore:manual:blocks=Blöcke
+hc.manual_cat.hammercore=Hammer Core
 
-gui.hammercore:manual/items/calculatron.title=Rechnotron
-gui.hammercore:manual/items/calculatron.desc=Dieses mächtige Item ist in der Lage komplizierte Ausdrücke zu berechnen. Versuchs Mal!
+hc.manual_name.hammercore=Hammer Core
+hc.manual_text.hammercore=A coremod for any APengu's mod
+hc.manual_desc.hammercore=HammerCore provides a very large set of APIs to use, some notable features are: ChunkLoad-API, Tooltip API (makes tiles show their progress / tooltip to both WAILA and The One Probe), Network API (for sending packets stored in NBTTagCompound), Multipart API, Cool Visual Effects and lots of others.
 
-gui.hammercore:manual/items/battery.title=Akkumulator
-gui.hammercore:manual/items/battery.desc=Dieser Gegenstand ist in der Lage 2M RF/FE zu speichern.
+hc.manual_name.calculatron=Calculatron
+hc.manual_text.calculatron=Do the math, plz!
+hc.manual_desc.calculatron=This item is capable of calculating very complicated expressions. You should give it a try
 
-gui.hammercore:manual/items/wrench.title=Schraubenschlüssel
-gui.hammercore:manual/items/wrench.desc=HammerCore erweitert die WrenchAPI um APengu's mods unabhängig von der Buildcraft APIzu machen. Dieses Item ist ein einfacher Schraubenschlüssel der auf Gegenständen dieser API reagiert.
+hc.manual_name.wrench=Wrench
+hc.manual_text.wrench=Dismantle the damn thing!
+hc.manual_desc.wrench=HammerCore adds WrenchAPI to make Pengu's mods independent of Buildcraft Wrench API. This item is a simple wrench that applies on tiles that respond to this API.
+
+hc.manual_name.iwrench=iWrench
+hc.manual_text.iwrench=Why is this betther?
+hc.manual_desc.iwrench=As said earlier wrench is used for custom system, but what does make iWrench special? Well, first off it creates a cube around the block that you're looking at. It is either red or green; Green if the block responds to wrench in ANY way.<LINE>The second handy feature is placing block is the air! To do this, sneak-click with the wrench on air and you'll place a ghost block that when clicked on will get replaced with the block that you're holding. Perfect.
+
+hc.manual_name.chunk_loader=Chunk Loader
+hc.manual_text.chunk_loader=Keeping things loaded!
+hc.manual_desc.chunk_loader=This device uses ender eye and constantly looks at the chunk that the loader is placed in. Kind of suspicious...
+
+hc.manual_name.battery=Accumulator
+hc.manual_text.battery=Storing RF/FE
+hc.manual_desc.battery=This item is capable of storing 2M RF/FE. <LINE>You can change charge mode by sneak-clicking the battery in your hand. All modes:<BR>Hotbar - charges only hotbar<BR>Armor - charges only armor<BR>Armor & Hotbar - charges armor and hotbar<BR>Inventory - charges entire player inventory<BR>Off - doesn't charge anything.
+
+recipe.type.workbench=Crafting
+recipe.type.workbenchshapeless=Crafting (Shapeless)
+recipe.type.construct=Multiblock Structure
+recipe.type.smelting=Smelting
+recipe.clickthrough=Click to View Recipe
+recipe.return=Back
 
 ##########
+
+##SPLASH TEXTS##
+
+hc.splash.mod=Also try mod %s!
+
+hc.splash.lt.1=%player% you spilled taint all over the floor!
+
+hc.splash.1=Now with mods!
+hc.splash.2=A certain penguin comes to mind...
+hc.splash.3="It's been a long time. How have you been?"
+hc.splash.4=Now WITH SOUNDS!
+hc.splash.5=99@PERCENT@ cubic!
+
+################
