--- a/src/main/resources/assets/hammercore/lang/ru_RU.lang
+++ b/src/main/resources/assets/hammercore/lang/ru_RU.lang
@@ -37,6 +37,9 @@ tile.hammercore:infi_rf.tooltip0=Генерирует 2,147,483,647 Эн/t
 tile.hammercore:infi_rf.tooltip1=Поддерживаемые типы "Эн" (Энергии):
 tile.hammercore:infi_rf.tooltip2=RF, FE, TESLA
 tile.hammercore:chunk_loader.name=Загрузчик чанков
+tile.hammercore:compound_crafting_table_0.name=ККС
+tile.hammercore:compound_crafting_table_1.name=Компонентный крафтовый стол
+tile.hammercore:compound_crafting_table_2.name=Компонентный крафтовый стол (ККС)
 
 ############
 
@@ -61,16 +64,51 @@ capability.items.name=Предметы
 
 ##MANUAL##
 
-bookapi.hammercore:manual:items=Предметы
-bookapi.hammercore:manual:blocks=Блоки
+hc.manual_cat.hammercore=Hammer Core
 
-gui.hammercore:manual/items/calculatron.title=Калькулятрон
-gui.hammercore:manual/items/calculatron.desc=Этот мощный предмет умеет решить очень тяжелые уравнения. Попробуйте!
+hc.manual_name.hammercore=Hammer Core
+hc.manual_text.hammercore=Ядро для всех модов от APengu
+hc.manual_desc.hammercore=HammerCore предоставляет очень огромный набор утилитного кода, некоторые из них: ChunkLoad-API, Tooltip API (отображает информацию о блоке через WAILA и The One Probe), Network API (для отправки пакетов сохраненных в названном компоненте тегов [NBT]), Multipart API, прикольные визуальные эффекты и много другого.
 
-gui.hammercore:manual/items/battery.title=Аккумулятор
-gui.hammercore:manual/items/battery.desc=Этот предмет может хранить 2М RF/FE.
+hc.manual_name.calculatron=Калькулятрон
+hc.manual_text.calculatron=Посчитайте это!
+hc.manual_desc.calculatron=Этот мощный предмет умеет решить очень тяжелые уравнения. Попробуйте!
 
-gui.hammercore:manual/items/wrench.title=Гаечный ключ
-gui.hammercore:manual/items/wrench.desc=HammerCore добавляет WrenchAPI что бы сделать моды от APengu независимыми от Buildcraft API. Данный предмет является простым ключом, который применяется на блоки которые могут реагировать на этот API.
+hc.manual_name.wrench=Гаечный ключ
+hc.manual_text.wrench=Демонтировать проклятую вещь!
+hc.manual_desc.wrench=HammerCore добавляет WrenchAPI что бы сделать моды от APengu независимыми от Buildcraft API. Данный предмет является простым ключом, который применяется на блоки которые могут реагировать на этот API.
+
+hc.manual_name.iwrench=iКлюч
+hc.manual_text.iwrench=Чем он лучше?
+hc.manual_desc.iwrench=Как сказано ранее, ключ используется для своей системы, но что делает iКлюч особенным? Ну, во-первых он создает куб вокруг блока, на который вы смотрите. Этот куб либо зеленый либо красный; Зеленый появляется если ключ может взаимодействовать с блоком любым способом.<LINE>Вторая полезная фича - установка блоков в воздухе! Что бы это сделать, используйте ключ, пока вы присели и вы поставите призрачный блок который заменяется тем, блоком, который вы поставите на него. Идеально.
+
+hc.manual_name.chunk_loader=Загрузчик чанков
+hc.manual_text.chunk_loader=Оставляем чанки загруженными!
+hc.manual_desc.chunk_loader=Данное устройство использует око края и постоянно следит за чанком, в котором установлен загрузчик. Немного подозрительно...
+
+hc.manual_name.battery=Аккумулятор
+hc.manual_text.battery=Храним RF/FE
+hc.manual_desc.battery=Этот предмет может хранить 2М RF/FE. <LINE>Вы можете изменить режим зарядки используя аккумулятор пока сидите. Все режимы:<BR>Панель быстрого доступа - заряжает исключительно предметы на панели быстрого доступа<BR>Броня - заряжает исключительно броню<BR>Броня и панель быстрого доступа - заряжает броню и предметы на панели быстрого доступа<BR>Инвентарь - заряжает весь инвентарь игрока<BR>Выключено - ничего не заряжает.
+
+recipe.type.workbench=Создание
+recipe.type.workbenchshapeless=Создание (Безформенное)
+recipe.type.construct=Мультиблочная постройка
+recipe.type.smelting=Обжарка
+recipe.clickthrough=Кликните, что бы посмотреть рецепт
+recipe.return=Назад
 
 ##########
+
+##SPLASH TEXTS##
+
+hc.splash.mod=Также попробуйте мод %s!
+
+hc.splash.lt.1=%player% вы разлили теинт на пол!
+
+hc.splash.1=Теперь с модами!
+hc.splash.2=На ум приходит определенный пингвин...
+hc.splash.3="Это было долго. Как твои дела?"
+hc.splash.4=Теперь СО ЗВУКОМ!
+hc.splash.5=99@PERCENT@ кубический!
+
+################
