--- a/src/main/resources/assets/hammercore/lang/en_US.lang
+++ b/src/main/resources/assets/hammercore/lang/en_US.lang
@@ -64,7 +64,9 @@ capability.fluid.name=Fluid
 capability.items.name=Items
 
 chat.hammercore:newversion=New version for mod %s detected: %s.
+chat.hammercore:corrupt=Mod %s has been corrupted!
 chat.hammercore:newversion.clickdwn=Download
+chat.hammercore:newversion.clickdwn.detail=Click to open browser at mod's official download page.
 
 #######
 
