Some network features, lang fixes and advanced item rendering.

--- a/src/main/resources/assets/hammercore/lang/ru_RU.lang
+++ b/src/main/resources/assets/hammercore/lang/ru_RU.lang
@@ -117,7 +117,7 @@ hc.splash.1=Теперь с модами!
 hc.splash.2=На ум приходит определенный пингвин...
 hc.splash.3="Это было долго. Как твои дела?"
 hc.splash.4=Теперь СО ЗВУКОМ!
-hc.splash.5=99<PERCENT> кубический!
+hc.splash.5=На 99 процентов кубический!
 hc.splash.6=Вы потеряли несколько секунд читая это!
 hc.splash.7=Ня!
 
