--- a/src/main/resources/assets/hammercore/lang/ru_RU.lang
+++ b/src/main/resources/assets/hammercore/lang/ru_RU.lang
@@ -120,6 +120,9 @@ hc.splash.4=Теперь СО ЗВУКОМ!
 hc.splash.5=На 99 процентов кубический!
 hc.splash.6=Вы потеряли несколько секунд читая это!
 hc.splash.7=Ня!
+hc.splash.8=You feel that a dragon is watching you...
+hc.splash.9=It feels like a dragon was here before you...
+hc.splash.10=I like your choice! Really!
 
 ################
 
