--- a/src/main/resources/assets/hammercore/lang/ru_RU.lang
+++ b/src/main/resources/assets/hammercore/lang/ru_RU.lang
@@ -121,6 +121,7 @@ hc.splash.28=Is this a feature or a mechanic?
 hc.splash.29=It's not an exploit if its a mechanic!
 hc.splash.30=It's not a bug if its a mechanic!
 hc.splash.31=Dragons are always welcome!
+hc.splash.32="Lewds with all the sexy dergs" - Kenith
 
 ################
 
