--- a/src/main/resources/assets/hammercore/lang/en_US.lang
+++ b/src/main/resources/assets/hammercore/lang/en_US.lang
@@ -67,12 +67,12 @@ hc.manual_name.battery=Accumulator
 hc.manual_text.battery=Storing RF/FE
 hc.manual_desc.battery=This item is capable of storing 2M RF/FE. <LINE>You can change charge mode by sneak-clicking the battery in your hand. All modes:<BR>Hotbar - charges only hotbar<BR>Armor - charges only armor<BR>Armor & Hotbar - charges armor and hotbar<BR>Inventory - charges entire player inventory<BR>Off - doesn't charge anything.
 
-recipe.type.workbench=Crafting
-recipe.type.workbenchshapeless=Crafting (Shapeless)
-recipe.type.construct=Multiblock Structure
-recipe.type.smelting=Smelting
-recipe.clickthrough=Click to View Recipe
-recipe.return=Back
+recipe.hammercore:type.workbench=Crafting
+recipe.hammercore:type.workbenchshapeless=Crafting (Shapeless)
+recipe.hammercore:type.construct=Multiblock Structure
+recipe.hammercore:type.smelting=Smelting
+recipe.hammercore:clickthrough=Click to View Recipe
+recipe.hammercore:return=Back
 
 ##########
 
