Update to modern mcp mappings, wrote kind of a story about self.

--- a/src/main/resources/assets/hammercore/lang/ru_RU.lang
+++ b/src/main/resources/assets/hammercore/lang/ru_RU.lang
@@ -7,7 +7,22 @@ item.hammercore:manual.name=Инструкция по Hammer Core
 
 ###########
 
+# Definitions
+definition.hammercore:fe.short=ЭФ
+definition.hammercore:fe.long=Энергия Фордж
+definition.hammercore:bt.short=ТГ
+definition.hammercore:bt.long=Тики Горения
+
 ##GUI##
+
+gui.hammercore.notfuel=Не топливо!
+gui.hammercore.generation=Генерация
+gui.hammercore.consumption=Потребление
+gui.hammercore.burntime=Время сгорания
+gui.hammercore.energy=Энергия
+gui.hammercore.process=Процесс
+gui.hammercore.fept=ЭФ/тик
+gui.hammercore.feps=ЭФ/сек
 
 options.modelPart.hammercore:renderSpecial=Отображать доп.
 options.modelPart.hammercore:overrideCape=Перезписать плащ
@@ -47,25 +62,20 @@ hc.manual_name.hammercore=Hammer Core
 hc.manual_text.hammercore=Ядро для всех модов от Zeitheron
 hc.manual_desc.hammercore=HammerCore предоставляет очень огромный набор утилитного кода, некоторые из них: ChunkLoad-API, Tooltip API (отображает информацию о блоке через WAILA и The One Probe), Network API (для отправки пакетов сохраненных в названном компоненте тегов [NBT]), Multipart API, прикольные визуальные эффекты и много другого.
 
-hc.manual_name.calculatron=Калькулятрон
-hc.manual_text.calculatron=Посчитайте это!
-hc.manual_desc.calculatron=Этот мощный предмет умеет решить очень тяжелые уравнения. Попробуйте!
-
 hc.manual_name.wrench=Гаечный ключ
 hc.manual_text.wrench=Демонтировать проклятую вещь!
-hc.manual_desc.wrench=HammerCore добавляет WrenchAPI что бы сделать моды от APengu независимыми от Buildcraft API. Данный предмет является простым ключом, который применяется на блоки которые могут реагировать на этот API.
+hc.manual_desc.wrench=HammerCore добавляет WrenchAPI что бы сделать моды от Zeitheron независимыми от Buildcraft API. Данный предмет является простым ключом, который применяется на блоки которые могут реагировать на этот API.
 
-hc.manual_name.iwrench=iКлюч
-hc.manual_text.iwrench=Чем он лучше?
-hc.manual_desc.iwrench=Как сказано ранее, ключ используется для своей системы, но что делает iКлюч особенным? Ну, во-первых он создает куб вокруг блока, на который вы смотрите. Этот куб либо зеленый либо красный; Зеленый появляется если ключ может взаимодействовать с блоком любым способом.<LINE>Вторая полезная фича - установка блоков в воздухе! Что бы это сделать, используйте ключ, пока вы присели и вы поставите призрачный блок который заменяется тем, блоком, который вы поставите на него. Идеально.
+hc.manual_name.apengu=APengu
+hc.manual_text.apengu=Грустная история прошлого
+hc.manual_desc.apengu.1=APengu был известен за разработку многих хороших модов (в 2017 году), и меня, конечно. Его жизнь была хорошей, он часто обновлял свои моды, добавлял новые идеи и больше API для меня, Hammer Core. Он был очень умным изобретателем в сообществе Minecraft. Но однажды, он увидел большого голубого дракона, который летал вокруг, и, вероятно, потерялся в поле. Он вышел и попытался встретить дракона. Этот пингвин, учитывая большую разницу в размерах, использовал свой усилитель громкости, чтобы заставить дракона заметить его. §4«Привет!»§f, - сказал он. Да, дракон услышал его и приземлился рядом. Глаза дракона были оранжевыми,
+hc.manual_desc.apengu.2=что означало, что он был очень голоден. §b«Ты хорошая закуска, мелкий!»§f, - прорычал он, глядя на моего создателя... §4«Погоди, я не закуска! Я талантливый разработчик, который работает в сообществе Minecraft!»§f - закричал пингвин, но было уже слишком поздно. Дракон начал лизать APengu, затем он подкинул его в воздух, открыл пасть, и бедный пингвин приземлился в его рот, и был проглочен одним глотком, целиком. Тогда дракон сказал: §b«Как видишь, ты должен дать мне продолжить твою работу, поскольку я очень талантлив, и извиняюсь за то, что не представился, мое имя Зейтерон, но я думаю, что уже поздно, хе-хе»§f. Пингвин был еще жив в течение нескольких часов, он кричал от боли, пытался выбраться из зверя, но ничего не получалось.
+hc.manual_desc.apengu.3=И в результате что у нас есть: увы, я мало что знаю о чем-то еще, но этот §mмонстр§f дракон по имени Зейтерон сдержал свое слово, и как оказалось, он также любит холодные места, так как он ледяной дракон. Хотя, старый дом был довольно большим для APengu, но что касается Зейта, ну, тот дом идеально подходит, так как дракон был больше, чем бедный пингвин. И да, теперь меня и другие моды APengu разрабатывает дракон, и я думаю, что он более талантлив, так как он сделал несколько своих модов, которые оказались действительно хорошими, и эй! Он использует меня, Hammer Core, я действительно счастлив.
 
-hc.manual_name.chunk_loader=Загрузчик чанков
-hc.manual_text.chunk_loader=Оставляем чанки загруженными!
-hc.manual_desc.chunk_loader=Данное устройство использует око края и постоянно следит за чанком, в котором установлен загрузчик. Немного подозрительно...
-
-hc.manual_name.battery=Аккумулятор
-hc.manual_text.battery=Храним RF/FE
-hc.manual_desc.battery=Этот предмет может хранить 2М RF/FE. <LINE>Вы можете изменить режим зарядки используя аккумулятор пока сидите. Все режимы:<BR>Панель быстрого доступа - заряжает исключительно предметы на панели быстрого доступа<BR>Броня - заряжает исключительно броню<BR>Броня и панель быстрого доступа - заряжает броню и предметы на панели быстрого доступа<BR>Инвентарь - заряжает весь инвентарь игрока<BR>Выключено - ничего не заряжает.
+hc.manual_name.zeitheron=Зейтерон
+hc.manual_text.zeitheron=Ледяной дракон
+hc.manual_desc.zeitheron.1=После печальной истории с APengu, у меня появился новый владелец по имени Зейт, ледяной дракон. Он несет ответственность за все мои оплошности и неудобства, которые я могу вам причинить. Иногда доходит до того, что я вообще отказываюсь исправляться, и проблемы, по-видимому, невозможно исправить. Но достаточно обо мне, эта запись не о мне! Зейтерон - очень хороший и симпатичный дракон, он примерно такой же высокий, как два средних человека. Я должен также отметить, что он может изменять цвет своих глаз, в разных ситуациях. Например, когда он голоден, его глаза оранжевые, когда печален - серые.
+hc.manual_desc.zeitheron.2=На шее у него рыбоподобный светло-голубой плавник, и у него есть уши, которые необычны, но не редкость для драконов. Его личность добрая, он заботится о друзьях, всегда идет мирным путем и избегает любых конфликтов. Зейт также наслаждается, когда его живот трут. Если вы хотите узнать больше о нем, вы должны просто познакомиться с ним, он, вероятно, не будет есть вас, только, я полагаю, если вы не встретите его с оранжевыми глазами.
 
 recipe.type.workbench=Создание
 recipe.type.workbenchshapeless=Создание (Безформенное)
