--- a/src/main/resources/assets/hammercore/lang/en_US.lang
+++ b/src/main/resources/assets/hammercore/lang/en_US.lang
@@ -36,6 +36,7 @@ options.hammercore:skintype.2=Slim
 gui.hammercore:calculatron=Calculatron vVERSION
 info.hammercore:energy_stored=RF Stored
 info.hammercore:changed_mode=Charging
+info.hammercore:witherproof=Wither-proof
 
 battery.hammercore:mode.noshare=Off
 battery.hammercore:mode.hotbar=Hotbar
