--- a/src/main/resources/assets/hammercore/lang/ru_RU.lang
+++ b/src/main/resources/assets/hammercore/lang/ru_RU.lang
@@ -36,6 +36,7 @@ options.hammercore:skintype.2=Тонкий
 gui.hammercore:calculatron=Калькулятрон vVERSION
 info.hammercore:energy_stored=RF Накоплено
 info.hammercore:changed_mode=Зарядка
+info.hammercore:witherproof=Устойчивый к взрывам Визера
 
 battery.hammercore:mode.noshare=Выключено
 battery.hammercore:mode.hotbar=панель быстрого доступа
