--- a/src/main/resources/assets/hammercore/lang/de_de.lang
+++ b/src/main/resources/assets/hammercore/lang/de_de.lang
@@ -12,6 +12,8 @@ item.hammercore:manual.name=Hammer Core Handbuch
 
 tile.hammercore:iron_bordered_cobblestone.name=Iron-Bordered Cobblestone
 tile.hammercore:gold_bordered_cobblestone.name=Gold-Bordered Cobblestone
+tile.hammercore:diamond_bordered_cobblestone.name=Diamond-Bordered Cobblestone
+tile.hammercore:emerald_bordered_cobblestone.name=Emerald-Bordered Cobblestone
 
 ###########
 
