--- a/src/main/resources/assets/hammerlib/langs/ru_ru.lang
+++ b/src/main/resources/assets/hammerlib/langs/ru_ru.lang
@@ -4,3 +4,14 @@ itemGroup.hammerlib=Hammer Lib
 
 block.hammerlib.test_machine=Тестовый механизм
 item.hammerlib.wrench=Гаечный ключ
+item.hammerlib.gears.wooden=Деревянная шестерня
+item.hammerlib.gears.stone=Каменная шестерня
+item.hammerlib.gears.copper=Медная шестерня
+item.hammerlib.gears.iron=Железная шестерня
+item.hammerlib.gears.gold=Золотая шестерня
+item.hammerlib.gears.diamond=Алмазная шестерня
+item.hammerlib.gears.netherite=Незеритовая шестерня
+
+info.hammerlib.material=Крафтовый материал
+
+key.hammerlib.render_item=[HammerLib] Render GUI Item
