--- a/src/main/resources/assets/hammerlib/langs/uk_ua.lang
+++ b/src/main/resources/assets/hammerlib/langs/uk_ua.lang
@@ -4,3 +4,14 @@ itemGroup.hammerlib=Hammer Lib
 
 block.hammerlib.test_machine=Тестова машина
 item.hammerlib.wrench=Гайковий ключ
+item.hammerlib.gears.wooden=Wooden Gear
+item.hammerlib.gears.stone=Stone Gear
+item.hammerlib.gears.copper=Copper Gear
+item.hammerlib.gears.iron=Iron Gear
+item.hammerlib.gears.gold=Golden Gear
+item.hammerlib.gears.diamond=Diamond Gear
+item.hammerlib.gears.netherite=Netherite Gear
+
+info.hammerlib.material=Crafting Material
+
+key.hammerlib.render_item=[HammerLib] Render GUI Item
