Backported @SimplyRegister mechanism, fix memory leaking in GlShaderStack (by clearing the stack every game tick), fixed (hopefully) apostrophe being taken, more methods in SoundObject

--- a/src/main/resources/assets/hammercore/lang/en_us.lang
+++ b/src/main/resources/assets/hammercore/lang/en_us.lang
@@ -5,6 +5,7 @@ keybind.hammercorerenderstack=[HC] Render Item
 ###ITEMS###
 
 item.hammercore:manual.name=Hammer Core Manual
+item.hammercore:wrench.name=Wrench
 
 ###########
 
